Fix asset listing page asset cards too close issue and asset details page asset type overlayer icon issue

--- a/apps/store/themes/store/css/left-navigation.css
+++ b/apps/store/themes/store/css/left-navigation.css
@@ -529,17 +529,15 @@ a.ctrl-filter-category:hover,a.ctrl-filter-category:focus
     box-shadow: inset 0 0 0 rgba(0,0,0,.075), 0 0 0 rgba(102, 175, 233, .6);
 }
 
-
-.ctrl-wr-asset  {
+.ctrl-wr-asset {
     position: relative;
     width: 15.2%;
     float: left;
-    margin: 0.5%;
     background: #fbfbfb;
     transition: all 0.5s ease;
     border: 1px solid #F1EBEB;
+    margin: 0.5% 0.5% 3%;
 }
-
 
 /* ============================================================ */
 
@@ -592,6 +590,17 @@ a.ctrl-filter-category:hover,a.ctrl-filter-category:focus
   bottom:2px;
   left:2px;
   opacity:1;
+}
+.ast-thumbnail .ast-type-icon {
+    display: block;
+    background: rgba(0, 0, 0, .3);
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 25px;
 }
 .ast-img .ast-type-icon {
     display: block;
@@ -776,7 +785,7 @@ a.ctrl-filter-category:hover,a.ctrl-filter-category:focus
     }
 
     .wr-content {  padding: 0; }
-    .ast-img{width: 50% !important; float: left;}
+    .ast-img{width: 50% !important; float: none;}
     .ast-title{width: 50% !important; float: left;}
     .itm-ast{width: auto !important;}
 }
